--- a/LanServe.Api/LanServe.Api.csproj
+++ b/LanServe.Api/LanServe.Api.csproj
@@ -1,21 +1,24 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net8.0</TargetFramework>
+		<Nullable>enable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.9" />
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.4" />
-  </ItemGroup>
+	<ItemGroup>
+		<!-- Dùng phiên bản .NET 8 tương ứng -->
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.*" />
+		<!-- Gói này bám ASP.NET Core 8, không dùng 9.x -->
+		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.*" />
+		<!-- Swashbuckle bản 6.x là tương thích .NET 8 -->
+		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.*" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\LanServe.Application\LanServe.Application.csproj" />
-    <ProjectReference Include="..\LanServe.Domain\LanServe.Domain.csproj" />
-    <ProjectReference Include="..\LanServe.Infrastructure\LanServe.Infrastructure.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\LanServe.Application\LanServe.Application.csproj" />
+		<ProjectReference Include="..\LanServe.Domain\LanServe.Domain.csproj" />
+		<ProjectReference Include="..\LanServe.Infrastructure\LanServe.Infrastructure.csproj" />
+	</ItemGroup>
 
 </Project>
