[LinhNHH] Connect MongoDB

--- a/LanServe.Api/appsettings.json
+++ b/LanServe.Api/appsettings.json
@@ -2,13 +2,21 @@
   "ConnectionStrings": {
     "Default": "Server=localhost;Database=LanServeDB;Trusted_Connection=True;TrustServerCertificate=True"
   },
-  "Mongo": {
+  "MongoDb": {
     "ConnectionString": "mongodb://localhost:27017",
-    "Database": "LanServeDB",
+    "DbName": "LanServeDev",
     "Collections": {
       "Users": "users",
+      "UserProfiles": "user_profiles",
       "Projects": "projects",
-      "Messages": "messages"
+      "Proposals": "proposals",
+      "Contracts": "contracts",
+      "Payments": "payments",
+      "Reviews": "reviews",
+      "Messages": "messages",
+      "Notifications": "notifications",
+      "Categories": "categories",
+      "Skills": "skills"
     }
   },
   "Jwt": { "Key": "CHANGE_ME_SUPER_SECRET" },
