--- a/LanServe.Infrastructure/LanServe.Infrastructure.csproj
+++ b/LanServe.Infrastructure/LanServe.Infrastructure.csproj
@@ -23,8 +23,9 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
+		<PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.9" />
 
-		<PackageReference Include="MongoDB.Driver" Version="2.25.*" />
+		<PackageReference Include="MongoDB.Driver" Version="3.5.0" />
 	</ItemGroup>
 
 </Project>
