--- a/LanServe.Api/appsettings.Development.json
+++ b/LanServe.Api/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Jwt": {
+    "Key": "b0d1d3f5-1f2e-4a6c-9b7a-1c2d3e4f5a6b7c8d9e0f1234567890ab",
+    "Issuer": "LanServe",
+    "Audience": "LanServeClient"
   }
 }
