[LinhNHH] Host DB + BE

--- a/LanServe.Api/appsettings.json
+++ b/LanServe.Api/appsettings.json
@@ -1,23 +1,7 @@
 {
-  "ConnectionStrings": {
-    "Default": "Server=localhost;Database=LanServeDB;Trusted_Connection=True;TrustServerCertificate=True"
-  },
   "MongoDb": {
-    "ConnectionString": "mongodb://localhost:27017",
-    "DbName": "LanServeDev",
-    "Collections": {
-      "Users": "users",
-      "UserProfiles": "user_profiles",
-      "Projects": "projects",
-      "Proposals": "proposals",
-      "Contracts": "contracts",
-      "Payments": "payments",
-      "Reviews": "reviews",
-      "Messages": "messages",
-      "Notifications": "notifications",
-      "Categories": "categories",
-      "Skills": "skills"
-    }
+    "ConnectionString": "mongodb+srv://lanserveUser:Binzdapoet.020904@hlinhwfil.eunq7.mongodb.net/?retryWrites=true&w=majority&appName=HlinhWfil",
+    "DbName": "LanServeDev"
   },
   "Jwt": { "Key": "CHANGE_ME_SUPER_SECRET" },
   "Logging": {
