--- a/LanServe.Api/appsettings.Development.json
+++ b/LanServe.Api/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "Jwt": {
-    "Key": "b0d1d3f5-1f2e-4a6c-9b7a-1c2d3e4f5a6b7c8d9e0f1234567890ab",
+    "Key": "d8h29sd8H29shd82Hs9dhs82Hs9dhs82Hsd92hs9dHs82hs9dHs82h",
     "Issuer": "LanServe",
     "Audience": "LanServeClient"
   }
