--- a/LanServe.Api/appsettings.json
+++ b/LanServe.Api/appsettings.json
@@ -3,7 +3,7 @@
     "ConnectionString": "mongodb+srv://lanserveUser:Binzdapoet.020904@hlinhwfil.eunq7.mongodb.net/?retryWrites=true&w=majority&appName=HlinhWfil",
     "DbName": "LanServeDev"
   },
-  "Jwt": { "Key": "CHANGE_ME_SUPER_SECRET" },
+  "Jwt": { "Key": "d8h29sd8H29shd82Hs9dhs82Hs9dhs82Hsd92hs9dHs82hs9dHs82h" },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
