--- a/LanServe.Api/appsettings.json
+++ b/LanServe.Api/appsettings.json
@@ -18,7 +18,7 @@
     }
   },
   "Cors": {
-    "AllowedOrigins": [ "http://localhost:5173" ]
+    "AllowedOrigins": [ "http://localhost:5173", "https://lanserveapi-hthkhve3cndrbney.malaysiawest-01.azurewebsites.net" ]
   },
   "Jwt": {
     "Key": "12345678901234567890123456789012"
