[AnPV] Add register + update login with google

--- a/LanServe.Api/LanServe.Api.csproj
+++ b/LanServe.Api/LanServe.Api.csproj
@@ -8,6 +8,7 @@
 
 	<ItemGroup>
 		<!-- Dùng phiên bản .NET 8 tương ứng -->
+		<PackageReference Include="Google.Apis.Auth" Version="1.71.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.*" />
 		<PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.3.0" />
 		<!-- Gói này bám ASP.NET Core 8, không dùng 9.x -->
