--- a/LanServe.Api/LanServe.Api.csproj
+++ b/LanServe.Api/LanServe.Api.csproj
@@ -8,12 +8,17 @@
 
 	<ItemGroup>
 		<!-- Dùng phiên bản .NET 8 tương ứng -->
+		<PackageReference Include="Mapster" Version="7.4.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.*" />
 		<PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.3.0" />
 		<!-- Gói này bám ASP.NET Core 8, không dùng 9.x -->
 		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.*" />
+		<PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.9" />
+		<PackageReference Include="MongoDB.Driver" Version="3.5.0" />
+		<PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
 		<!-- Swashbuckle bản 6.x là tương thích .NET 8 -->
-		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.*" />
+		<PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.6" />
+		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.14.0" />
 	</ItemGroup>
 
 	<ItemGroup>
