--- a/LanServe.Infrastructure/LanServe.Infrastructure.csproj
+++ b/LanServe.Infrastructure/LanServe.Infrastructure.csproj
@@ -24,6 +24,8 @@
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.9" />
+		<PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.9" />
+		<PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.9" />
 
 		<PackageReference Include="MongoDB.Driver" Version="3.5.0" />
 	</ItemGroup>
