[LinhNHH] Add Payment

--- a/LanServe.Api/appsettings.json
+++ b/LanServe.Api/appsettings.json
@@ -29,5 +29,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Vnpay": {
+    "TmnCode": "VLBGJF44",
+    "HashSecret": "A4PRF8787Q33R91VTS7T4N501VHNDU1T",
+    "ReturnUrl": "http://localhost:5070/api/payments/vnpay-return",
+    "PaymentUrl": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html"
+  },
+  "TimeZoneId": "SE Asia Standard Time",
+  "Frontend": {
+    "BaseUrl": "http://localhost:5173" // đổi đúng cổng FE của bạn
+  }
 }
