--- a/LanServe.Application/LanServe.Application.csproj
+++ b/LanServe.Application/LanServe.Application.csproj
@@ -9,6 +9,7 @@
 		<PackageReference Include="FluentValidation" Version="12.0.0" />
 		<PackageReference Include="Mapster" Version="7.4.0" />
 		<PackageReference Include="MediatR" Version="13.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.9" />
 	</ItemGroup>
 
 	<PropertyGroup>
